# AnoSecureKit-Community

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  COMM-REL-02-v0.4.zip.sha256  COMMUNITY_SPLIT_NOTES.md  CONTRIBUTING.md  MANIFEST.sha256  README.md  SECURITY.md  collect_v0.4.0-publication-evidence(2).sh
.github/: dependabot.yml
.github/workflows/: anosecurekit-ci.yml  codeql.yml  fuzz.yml
COMM-REL-02-v0.4.0-evidence/: EVIDENCE_MANIFEST.json  SUMMARY.md  actions-runs.json  annotated-tag.json  check-runs.json  codeql-main-analyses.json  codeql-release-commit.json  collection-state.txt  combined-status.json  download-state.txt  downloaded-assets.tsv  downloaded-sha256.txt  gh-auth-status.txt  github-digest-comparison.json  github-digest-comparison.tsv  main-ref.json  platform-evidence.json  release-assets.json  release-assets.tsv  release-commit.json  release-state.txt  release.json  repository.json  resolved-release-commit.txt  sbom-assets.tsv  sbom-comparison.json  sha256-verification.txt  tag-ref.json  tag-to-main-compare.json  tool-versions.txt  workflow-job-summary.json  workflow-run-summary.json
COMM-REL-02-v0.4.0-evidence/attestations/: state.txt
COMM-REL-02-v0.4.0-evidence/downloads/: SHA256SUMS.txt  anosecurekit-0.4.0-release.spdx.json
COMM-REL-02-v0.4.0-evidence/runs/: 29241168471-jobs.json  29241168471-view.txt  29241168496-artifacts.json  29241168496-jobs.json  29241168496-view.txt  29242038502-artifacts.json  29242038502-jobs.json  29242038502-view.txt  29250834413-jobs.json  29250834413-view.txt  29334006653-jobs.json  29334006653-view.txt  29459387103-jobs.json  29459387103-view.txt
artifacts/v0.3.0-post-publication-audit/: README.md
artifacts/v0.4.0-codeql-triage/: README.md
artifacts/v0.4.0-post-publication-audit/: README.md
artifacts/v0.4.0-provider-parity/: README.md
benchmarks/: crypto_file_bench.cpp
cmake/: anosecurekitConfig.cmake.in  check_backend_boundary.cmake  check_cli_docs.cmake  check_document_alignment.cmake  check_legacy_identifiers.cmake  check_shared_symbol_annotations.cmake  check_shared_symbols.cmake  check_spdx.cmake  extract_release_notes.cmake  shared_symbol_allowlist.txt
docs/: ANOCRYPTO_BOUNDARY.md  BACKEND_AND_PROVIDER_CONTRACT.md  BACKEND_ARCHITECTURE.md  BENCHMARKS.md  CLI.md  CODEQL_TRIAGE_STATUS.md  COVERAGE.md  CROSS_REPOSITORY_BOUNDARY.md  CURRENT_STATUS.md  DEPENDENCY_POLICY.md  DOCUMENTATION_GUIDE.md  DOCUMENT_INDEX.md  DOGFOODING.md  EDITIONS.md  EXTERNAL_SECURITY_REVIEW.md  FORMAT.md  FUZZING.md  INTERNALS.md  KDF_AGILITY.md  LICENSE_POLICY.md  NEXT_WORK_QUEUE.md  OPENSSL_POLICY.md  PROVIDER_PARITY_STATUS.md  PUBLIC_API_POLICY.md  PUBLIC_FILE_VERIFICATION_API.md  RELEASE_AND_EVIDENCE_STATUS.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  REPOSITORY_HYGIENE.md  ROADMAP.md  SECURITY_MODEL.md  SHARED_LIBRARY_ABI.md  VERIFY_RELEASE.md  WEB_ROADMAP.md  cli.html  index.html  license.html  release-verification.html  roadmap.html  security.html
docs/assets/: site.css  tool.css
docs/guides/: aes-gcm.html  base64.html  base64url.html  file-sealing.html  hmac-sha256.html  password-file-sealing.html  random-token.html  sha256.html
docs/tools/: aes-gcm.html  base64.html  hmac-sha256.html  random-token.html  sha256.html
examples/basic/: CMakeLists.txt  main.cpp
include/anosecurekit/: aead.hpp  anosecurekit.hpp  base64.hpp  compare.hpp  error.hpp  export.hpp  file.hpp  hash.hpp  hex.hpp  key_wrap.hpp  packet_stream.hpp  random.hpp  types.hpp  version.hpp
src/: aead.cpp  aead_internal.hpp  base64.cpp  compare.cpp  crypto_backend.cpp  error.cpp  file.cpp  file_crypto.cpp  file_detail.hpp  file_io.cpp  hash.cpp  hex.cpp  key_wrap.cpp  packet_stream.cpp  random.cpp  version.cpp  wipe.hpp
src/backend/: crypto_backend.hpp  crypto_backend_openssl.cpp
src/cli/: commands.cpp  commands.hpp  main.cpp
src/internal/: secure_wipe.cpp  secure_wipe.hpp
tests/: aead_test.cpp  base64_test.cpp  compare_test.cpp  file_test.cpp  fixture_inventory_test.cpp  fixture_utils.hpp  hash_test.cpp  hex_test.cpp  internal_wipe_test.cpp  key_wrap_test.cpp  packet_stream_test.cpp  public_headers_test.cpp  random_test.cpp
tests/cli/: check_cli.cmake
tests/consumer/: CMakeLists.txt  main.cpp
tests/external_backend/: CMakeLists.txt  main.cpp
tests/fixtures/: README.md  skf1-binary-aad.hex  skf1-empty-aad.hex  skf1-known-file.hex  skt1-aes256-gcm-aad.hex
tests/fixtures/negative/: README.md
tests/fuzz/: base64_fuzz.cpp  base64url_fuzz.cpp  file_fuzz.cpp  fuzz_utils.hpp  hex_fuzz.cpp  skt1_fuzz.cpp
tests/package/: check_dogfood.cmake  check_external_backend_hook.cmake  check_external_backend_parity.cmake  check_installed_cli.cmake  check_package.cmake  check_package_recipes.cmake  check_release_assets.cmake  check_release_preflight.cmake  check_release_workflow.cmake  check_shared_package.cmake
